--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="conduit_green">#5CBB5C</color>
+    <color name="conduit_green_dark">#228722</color>
+    <color name="conduit_green_dark_transparent">#57228722</color>
+    <color name="conduit_grey">#818a91</color>
+    <color name="conduit_grey_dark">#646A70</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
