--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,6 +6,12 @@
     app:startDestination="@+id/nav_home">
 
     <fragment
+        android:id="@+id/nav_feed"
+        android:name="com.appchef.medium_clone.ui.feed.GlobalFeedFragment"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_feed" />
+
+    <fragment
         android:id="@+id/nav_home"
         android:name="com.appchef.medium_clone.ui.home.HomeFragment"
         android:label="@string/menu_home"
